# server/src/docs/swagger.yaml
@@ -37,9 +37,9 @@ paths:
                             schema:
                                 type: array
                                 items:
-                                    $ref: '#/components/schemas/book'
+                                    type: string
                             examples:
-                                All Books:
+                                List of books:
                                     value:
                                         -
                                             id: 1513
@@ -137,9 +137,9 @@ paths:
                                         -
                                             id: 28054
                                             name: The Brothers Karamazov
-                    description: Returns array of books
-            summary: Get all Books
-            description: Returns array of books
+                    description: Returns list of books
+            summary: Get list of books
+            description: Returns a list of books
         post:
             tags:
                 - books
@@ -155,25 +155,29 @@ paths:
                                         id: 24
                                         createdAt: 2023/09/26
                     description: 'Returns created book id, createdAt'
+            operationId: /books/create
             summary: Add new Book
             description: 'Returns created book id, createdAt'
     '/users/{id}':
         get:
             tags:
-                - details
+                - users
             responses:
                 '200':
                     content:
                         application/json:
                             schema:
-                                type: array
-                                items:
-                                    type: string
+                                $ref: '#/components/schemas/user'
                             examples:
                                 Full details of book:
-                                    value: >-
-                                        id:1,firstname:"Jeff",lastname:"Bezos",email:"jeffbezos@amazon.com",password:"markzuckerbergsux",username:"bigbezos420",phonenr:"+1
-                                        11748794"}
+                                    value:
+                                        id: 44
+                                        firstname: some text
+                                        lastname: some text
+                                        email: some text
+                                        password: some text
+                                        username: some text
+                                        phonenr: some text
                     description: Returns full details of given id user
                 '404':
                     content:
@@ -188,6 +192,12 @@ paths:
             operationId: id
             summary: Get details of a user
             description: Returns details of user
+        delete:
+            tags:
+                - users
+            responses:
+                '204': {}
+            description: Deletes user from database
         parameters:
             -
                 name: id
@@ -201,14 +211,12 @@ paths:
                 '200':
                     content:
                         application/json:
-                            schema:
-                                $ref: '#/components/schemas/book'
                             examples:
-                                Single Book:
+                                Book:
                                     value:
                                         id: 1513
                                         name: Romeo and Juliet
-                    description: Returns Book by id
+                    description: Returns book by id
                 '404':
                     content:
                         application/json:
@@ -219,33 +227,8 @@ paths:
                                     value:
                                         error: book not found.
                     description: Returns error
-            summary: Get one Book
-            description: Returns Book by id
-        put:
-            tags:
-                - books
-            responses:
-                '201':
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/book'
-                            examples:
-                                New Book:
-                                    value: "{\r\n    \"id\": 1513,\r\n    \"name\": \"Romeo and Juliet 2\"\r\n},"
-                    description: Returns updated Book
-                '400':
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/error'
-                            examples:
-                                Error:
-                                    value:
-                                        error: Invalid fields provided.
-                    description: Returns error
-            summary: Update Book by id
-            description: Returns updated Book
+            summary: Get one book
+            description: Returns book by id
         parameters:
             -
                 name: id
@@ -264,16 +247,31 @@ components:
                     type: string
             example:
                 error: Error message.
-        book:
-            title: Root Type for book
+        user:
+            title: Root Type for user
             description: ''
             type: object
             properties:
                 id:
                     format: int32
                     type: integer
-                name:
+                firstname:
+                    type: string
+                lastname:
+                    type: string
+                email:
+                    type: string
+                password:
+                    type: string
+                username:
+                    type: string
+                phonenr:
                     type: string
             example:
-                id: 1513
-                name: Romeo and Juliet
+                id: 1
+                firstname: Jeff
+                lastname: Bezos
+                email: jeffbezos@amazon.com
+                password: markzuckerbergsux
+                username: bigbezos420
+                phonenr: +1 11748794
